fix: fix elements overflow (#14)

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
